@@ -1,3 +1,7 @@
+Mon Jun 16 13:49:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* config.h, rcmd.h, rcmd.c: Add "copyright" notice.
+
 Sun Jun  8 23:41:56 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* config.h (HAVE_MKFIFO): Remove; not used anywhere.
